fix(kcp): 适配 java-kcp(kcp-base 1.6.2) 并修复 scatter KCP 场景
- kcp-starter 依赖由 io.jpower:kcp-netty 迁移至 com.github.l42111996:kcp-base 1.6.2，
  KcpServer/KcpClient/KcpSyncClient 改用 kcp-base API（kcp.Ukcp/KcpListener/User）
- 修复 KcpSyncClient 未实现 SyncClient 接口方法（send/addListener/removeListener/getMetadata）
- 修复 KcpServer/KcpClient handleReceive 双重 release ByteBuf 导致 IllegalReferenceCountException
- 修复 KcpSyncClient 连接前注册订阅抛"KCP 未连接"（pendingSubscriptions 缓存，连接后应用）
- 修复 KcpHttpClient 错误 Json import；KcpServer 补 kcp.User import
- example-starter 补齐 netty 4.2 kqueue 类依赖，移除旧 kcp-netty 的 netty 4.1.68 钉住